UX-106 Fix radio and checkbox label alignment

--- a/packages/matchbox/src/components/Checkbox/Checkbox.module.scss
+++ b/packages/matchbox/src/components/Checkbox/Checkbox.module.scss
@@ -90,7 +90,7 @@
   display: inline-block;
   vertical-align: top;
   padding-left: 9px;
-  margin-top: 2px;
+  margin-top: 1px;
   line-height: 18px;
   white-space: nowrap;
 }
