--- a/packages/matchbox/src/components/Radio/Radio.module.scss
+++ b/packages/matchbox/src/components/Radio/Radio.module.scss
@@ -69,7 +69,7 @@
 .Label {
   position: absolute;
   padding-left: 27px;
-  padding-top: 4px;
+  padding-top: 3px;
   white-space: nowrap;
 }
 
